payment gateway and social medialinks

--- a/SelahSeries/Views/Admin/_AdminLayout.cshtml
+++ b/SelahSeries/Views/Admin/_AdminLayout.cshtml
@@ -6,6 +6,10 @@
     <title>@ViewBag.Title</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="apple-touch-icon" sizes="180x180" href="~/sitersc/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="~/sitersc/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="~/sitersc/favicon-16x16.png">
+    <link rel="manifest" href="~/sitersc/site.webmanifest">
     @if (IsSectionDefined("AddToHead"))
     {
         @RenderSection("AddToHead", required: false)
