--- a/SelahSeries/Views/Shared/SearchPartial.cshtml
+++ b/SelahSeries/Views/Shared/SearchPartial.cshtml
@@ -3,7 +3,7 @@
     @if (ViewData["Search"].ToString() == "posts")
     {
         <form action="~/search/searchposts" method="get">
-            <input type="search" name="searchText" id="search" class="header_search_input" required="required" placeholder="Type to Search..">
+            <input style="width:100%;" type="search" name="searchText" id="search" class="header_search_input" required="required" placeholder="Type to Search..">
             <img class="header_search_icon" src="~/NewFolder2/new/search.png" alt="">
         </form>
     }
@@ -11,7 +11,7 @@
     {
 
         <form action="~/search/searchbooks" method="get">
-            <input type="search" name="searchText" id="search" class="header_search_input" required="required" placeholder="Type to Search..." />
+            <input style="width:100%;" type="search" name="searchText" id="search" class="header_search_input" required="required" placeholder="Type to Search..." />
             <img class="header_search_icon" src="~/NewFolder2/new/search.png" alt="">
         </form>
     }
@@ -19,7 +19,7 @@
     {
 
         <form action="~/search/searchall" method="get">
-            <input type="search" name="searchText" id="search" class="header_search_input" required="required" placeholder="Type to Search...">
+            <input style="width:100%;" type="search" name="searchText" id="search" class="header_search_input" required="required" placeholder="Type to Search...">
             <img class="header_search_icon" src="~/NewFolder2/new/search.png" alt="">
         </form>
 
