--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -30,10 +30,11 @@
     //    Books_Slide2.Add(Model.Books[i]);
     //}
 }
+@section AddMetaTags {
 
     <meta property="og:title" content="Selah Series">
     <meta property="og:description" content="A blog on relationship and marriage, career, sport and politis">
-    <meta property="og:image" content="~/NewFolder2/new/selah s.png">
+    <meta property="og:image" content="selahseries.com/NewFolder2/new/selah s.png">
     <meta property="og:url" content="selahseries.com">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
@@ -298,22 +299,22 @@
                         {
                             <nav>
                                 <ul id="navDiv0" class="pagination pg-red pagination-lg justify-content-center">
-                                    <li class="page-item">
+                                    <li class="page-item @(previous<2? "disabled" : "")">
                                         <a href="~/@previous?category=@category#blog" class="page-link waves-effect waves-effect" aria-label="Previous">
                                             <span aria-hidden="true">«</span>
                                             <span class="sr-only">Previous</span>
                                         </a>
                                     </li>
                                     @{
-                                        var postCount = Model.TotalPostCount < 1 ? 1 : Model.TotalPostCount;
-                                        var numberOfPages = (int)Math.Ceiling((Decimal)Model.LatestArticle.Count() / postCount);
+                                        var postCount = Model.LatestArticle.Count < 1 ? 1 : Model.LatestArticle.Count;
+                                        var numberOfPages = (int)Math.Ceiling((Decimal)Model.TotalPostCount / 9);
                                         foreach (var item in Enumerable.Range(1, numberOfPages))
                                         {
-                                            <li class="page-item btnn0 @(Model.CurrentPage == item? "active" : "")   "><a href="~/@item?category=@category#blog" class="page-link waves-effect waves-effect">@item</a></li>
+                                        <li class="page-item btnn0 @(Model.CurrentPage == item? "active" : "")   "><a href="~/@item?category=@category#blog" class="page-link waves-effect waves-effect">@item</a></li>
                                         }
                                     }
 
-                                    <li class="page-item btnn0">
+                                    <li class="page-item btnn0  @(next > numberOfPages? "disabled" : "")">
                                         <a href="~/@next?category=@category#blog" class="page-link waves-effect waves-effect" aria-label="Next">
                                             <span aria-hidden="true">»</span>
                                             <span class="sr-only">Next</span>
