added some pictures to about us pae and support

--- a/SelahSeries/Views/Home/About.cshtml
+++ b/SelahSeries/Views/Home/About.cshtml
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="card" style="border-radius:0px">
-                            <img class="card-img-top" src="/NewFolder2/images2/img_1.jpg" alt="Card image cap">
+                            <img class="card-img" src="/NewFolder2/new/MrLekan.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="h5 card-text">‘Lekan: Simply a Blend of Grace, Vision and Courage!</p>
                                 <p class="h6">
@@ -129,7 +129,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="card" style="border-radius:0px">
-                        <img class="card-img-top" src="/NewFolder2/images2/img_1.jpg" alt="Card image cap">
+                        <img class="card-img" src="/NewFolder2/new/mrsTiti.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="h5 card-text">Titilayo: a World of Vision Embedded in Tranquillity</p>
                             <p class="h6">
@@ -204,7 +204,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="card" style="border-radius:0px">
-                        <img class="card-img-top" src="/NewFolder2/images2/img_1.jpg" alt="Card image cap">
+                        <img class="card-img" src="/NewFolder2/new/eureka.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="h5 card-text">
                                 EUREKA!! TITILAYO (NEE AKINTILO) IS MRS. LEKAN-AGUNBIADE
@@ -341,6 +341,7 @@
     .carousel {
         background: white;
         margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     .carousel-inner {
@@ -450,5 +451,13 @@
 
     .indent {
         text-indent: 2.5em;
+    }
+
+    .h6{
+        font-weight: 400;
+    }
+
+    .row{
+        align-items: center;
     }
 </style>
