--- a/SelahSeries/Views/Support/Index.cshtml
+++ b/SelahSeries/Views/Support/Index.cshtml
@@ -202,7 +202,7 @@
                             <div class="frontside">
                                 <div class="card">
                                     <div class="card-body text-center">
-                                        <p><img class=" img-fluid" src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_03.png" alt="card image"></p>
+                                        <p><img class=" img-fluid" src="~/NewFolder2/ministers/Popoola.jpg" alt="card image"></p>
                                         <h4 class="card-title">Elijah Oluwamayowa & Oluwafeyikemi Eunice Popoola</h4>
                                         <p class="card-text">University Administrator and Nurse, Lecturer Respectively; Youth Pastors. </p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
