--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
 
             <div class="carousel-caption text-block d-md-block">
                 <h3 style="margin-bottom: 15px; color:#f2ba16">Ponder on your path to fulfilment</h3>
-                <p><a href="#blog" style=" letter-spacing: 0.02em;" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
+                <p><a href="~/blog/index" style=" letter-spacing: 0.02em;" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
 
             </div>
 
@@ -76,7 +76,7 @@
                 <h3 class="mb-4" style="">Home of counsel and support</h3>
 
 
-                <p><a href="#blog" style=" letter-spacing: 0.02em;" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
+                <p><a href="~/blog/index" style=" letter-spacing: 0.02em;" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
             </div>
 
         </div>
@@ -86,7 +86,7 @@
                 <h3 class="mb-4">With us, you come up and grow your potentials</h3>
 
 
-                <p><a href="#blog" style=" letter-spacing: 0.02em;" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
+                <p><a href="~/blog/index" style=" letter-spacing: 0.02em;" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
             </div>
 
         </div>
@@ -96,7 +96,7 @@
             <div class="carousel-caption text-block d-md-block">
                 <h3 class="mb-4">Get incising updates on politics and football</h3>
 
-                <p><a href="#blog" style=" letter-spacing: 0.02em;" class="btn btn-primary">Visit Blog</a></p>
+                <p><a href="~/blog/index" style=" letter-spacing: 0.02em;" class="btn btn-primary">Visit Blog</a></p>
             </div>
 
         </div>
